# django-query-doctor-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: serializers.py  urls.py  views.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
shop/: admin.py  models.py  urls.py  views.py
shop/management/commands/: seed_data.py
shop/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: activity_log.html  dashboard.html  user_list.html
templates/blog/: author_detail.html  post_detail.html  post_list.html  tag_detail.html
templates/shop/: category_detail.html  home.html  order_detail.html  order_list.html  product_detail.html  product_list.html
