[project]
name = "django-query-doctor-demo"
version = "1.0.0"
description = "A deliberately broken Django project showcasing django-query-doctor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Hassan Zaib Hayat", email = "hassanzaibhayatske@gmail.com"}]

[project.urls]
Homepage = "https://github.com/hassanzaibhay/django-query-doctor-demo"
